[package]
name = "ireina"
version = "0.1.0"
authors = ["Jianfeng Zhang <swordfeng123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1", features = ["full"] }
tokio-compat-02 = "*"
reqwest = { version = "0.11.1", features = ["json"] }
anyhow = "*"
serde_json = "1.0"
rust_decimal = "1.10"
futures = "0.3"
once_cell = "1.6.0"
telegram-bot = "0.7"
serde = "*"