[package]
name = "ireina"
version = "0.1.0"
authors = ["Jianfeng Zhang <swordfeng123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1", features = ["full"] }
tokio-compat-02 = "*"
reqwest = { version = "0.11.1", default-features = false, features = ["json"] }
anyhow = "*"
serde_json = "1.0"
rust_decimal = "1.10"
futures = "0.3"
serde = "*"
yahoo_finance_api = "*"
async-trait = "*"
log = "0.4.20"
env_logger = "*"
teloxide = { version = "0.12", features = ["macros"] }
json-structural-diff = "~0.1.0"
pretty-duration = "~0.1.1"

[profile.release]
lto = "thin"