[package]
name = "ireina"
version = "0.1.0"
authors = ["Jianfeng Zhang <swordfeng123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1", features = ["macros"] }
futures = { version = "0.3", default-features = false}
reqwest = "0.12"
anyhow = "*"
serde_json = "1.0"
rust_decimal = "1.10"
serde = "*"
yahoo_finance_api = "*"  # 2.2.1
async-trait = "*"
log = "0.4"
env_logger = "*"
teloxide = { version = "0.13", features = ["macros"] }
json-structural-diff = "~0.1.0"
pretty-duration = "~0.1.1"

[patch.crates-io]
teloxide = { git = "https://github.com/teloxide/teloxide.git", rev = "94db1757dc96116f4756a586fcbce3ac5ebd0c59" }

[profile.release]
lto = "thin"
strip = true